Fix DM modal close call to allow character data boot

--- a/index.html
+++ b/index.html
@@ -1958,7 +1958,7 @@ function updateUiForSelection(key){
     dmSummaryBar.setAttribute('aria-hidden', showSummary?'false':'true');
   }
   if(!isDm){
-    closeDmItemsPopover();
+    closeDmItemsModal();
   }
   if(activityToggleBtn){
     activityToggleBtn.style.display=isDm?'none':'';
